--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,15 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 * {
-	padding: 0;
 	margin: 0;
+	padding: 0;
 	box-sizing: border-box;
 }
-
-img {
-	width: 100%;
-}
-
 body {
 	margin: 0;
 	padding: 0;
-	font-family: sans-serif;
+	font-family: "Poppins", sans-serif;
+
+	height: 100vh;
+	background: linear-gradient(#2a00b7, #42006c);
 }
